# UPC_Benchmark

./: .run.sh.swp  CMakeLists.txt  README.md  astral_results.txt  bash_upcc.sh  makefile  rebuild.sh  run.sh  upcenv.sh
bench/: Benchmark  main.c  makefile
include/: T.h  t1.h  t2.h
output/: results.txt
src/: CMakeLists.txt
src/bench/: Benchmark  CMakeLists.txt  main.c
src/tests/: CMakeLists.txt
src/tests/add_vectors/: t2.c  t2.h
src/tests/affinity_vs_T/: T.h  affvt.c  affvt.h
src/tests/lib_testing/: makefile
src/tests/mem_alloc/: memory.h
src/tests/mult_matrices/: CMakeLists.txt  T.h  makefile  mult_mat.c  mult_mat.h
src/tests/pointers/: CMakeLists.txt  T.h  pointers.c  pointers.h
src/tests/vector_testing/: makefile
tests/: makefile
tests/add_vectors/: makefile  t2.c  t2.h
tests/dynamic_threads/: main.c
tests/guaperro/: foo.c  foo.h  main.c
tests/lib_testing/: makefile  t1.c  t1.h
tests/mem_alloc/: makefile  memory.c
tests/mult_matrices/: bench.c  bench.h  makefile
tests/vector_testing/: Test  main.c  makefile
